libraries/ckit/regression/valid-programs/a15.c
main () {
  int j=1;
  int *i = &j;

  *(i++) = 3;
}
