libraries/ckit/regression/invalid-programs/r34.c
main () {
 int j;
 int * const y = &j;
 y=&j; 
}
